src/components/layout.css
/* ... */
.btn--plain {
  text-transform: initial;
  background-color: var(--clr-bg-alt);
  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
  border: 0;
}

.btn--plain:hover {
  transform: translateY(-4px);
}

.btn--icon {
  padding: 0;
  font-size: 1.2rem;
}

.btn--icon:hover,
.btn--icon:focus {
  color: var(--clr-primary);
}

.btn--icon:active {
  transform: translateY(-5px);
}

.sticky-nav {
  position: sticky;
  top: 0;
  z-index: 100;
}
/*========
  layout
========*/
#badges {
  display: flex;
  justify-content: flex-start;
}
.profilepic {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  display: flex;
  align-items: center;
}

.projectpic {
  width: 150px;
  height: 140px;
  border-radius: 10%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
  box-shadow: 5px 2px 2px #444;
}

.center {
  display: flex;
  align-items: center;
}

.header {
  height: 4em;
  max-width: 1100px;
  width: 95%;
  margin: 0 auto;
  justify-content: space-between;
}

main {
  max-width: 1100px;
  width: 95%;
  margin: 0 auto;
}

.section {
  margin-top: 5em;
}

.section__title {
  text-align: center;
  margin-bottom: 1em;
  text-transform: uppercase;
}

.nav__list {
  margin-right: 1.5em;
  display: flex;
}

.nav__list-item {
  margin-left: 1.5em;
}

.nav__hamburger {
  display: none;
  width: 1em;
}

.about {
  flex-direction: column;
  margin-top: 3em;
}

.about__name {
  color: var(--clr-primary);
}

.about__role {
  margin-top: 1.2em;
}

.about__desc {
  font-size: 1rem;
  max-width: 600px;
}

.about__desc,
.about__contact {
  margin-top: 2.4em;
}

.about .link--icon {
  margin-right: 0.8em;
}

.about .btn--outline {
  margin-right: 1em;
}

.projects__grid {
  max-width: 1100px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
  grid-gap: 2em;
}

.project {
  padding: 2em;
  margin: 0 auto;
  text-align: center;
  box-shadow: var(--shadow);
  transition: transform 0.2s linear;
}

.project:hover {
  transform: translateY(-7px);
}

.project__description {
  margin-top: 1em;
}

.project__stack {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 1.2em 0;
}

.project__stack-item {
  margin: 0.5em;
  font-weight: 500;
  font-size: 0.8rem;
  color: var(--clr-fg-alt);
}

.project .link--icon {
  margin-left: 0.5em;
}

.skills__list {
  max-width: 450px;
  width: 95%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.skills__list-item {
  margin: 0.2em;
}

.contact {
  flex-direction: column;
}

.footer {
  padding: 3em 0;
  margin-top: 4em;
  text-align: center;
}

.footer__link {
  font-size: 0.9rem;
  font-weight: 700;
  color: var(--clr-fg);
}

.scroll-top {
  position: fixed;
  bottom: 1em;
  right: 2em;
  background-color: transparent;
  font-size: 1.8rem;
  transition: transform 0.2s ease-in-out;
}

@media (max-width: 600px) {
  .header {
    height: 6em;
  }

  .section {
    margin-top: 4em;
  }

  .formcarry-container input,
  .formcarry-container textarea,
  .formcarry-container select {
    font-size: 16px;
    padding: 12px 16px;
  }

  .formcarry-container button {
    font-size: 16px;
    padding: 12px 16px;
  }

  .nav__list {
    flex-direction: column;
    padding: 4em 0;
    position: absolute;
    right: 0;
    left: 0;
    top: 5em;
    background-color: var(--clr-bg);
    width: 0;
    overflow: hidden;
    transition: width 0.2s ease-in-out;
  }

  .display-nav-list {
    width: 100%;
  }

  .nav__list-item {
    margin: 0.5em 0;
  }

  .nav__hamburger {
    display: flex;
    margin-left: 0.8em;
     margin-top: 0.5px; 
  }

  .header {
    position: relative;
    padding: 0.5rem 0.5rem; 
  }
  .nav-container {
    display: flex;
    align-items: center;
  }
  .about {
    align-items: flex-start;
    margin-top: 2em;
  }

  .footer {
    padding: 2em;
    margin-top: 3em;
  }
}

/*=============================================
=            Form and Modal           =
=============================================*/
dialog {
  z-index: 10;
  margin: auto;
  background: #0874f0;
  border: none;
  border-radius: 0.2rem;
}
[page-modal]::backdrop {
  background-color: hsla(0, 0%, 0%, 0.5);
}
.formcarry-container {
  box-sizing: border-box;
  margin: 40px auto 0 auto;
  padding: 10;
  font-family: "Josefin Sans", sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: -0.01em;

  width: 400px;

  /* NORMAL */
  --fc-border-color: #eceff9;
  --fc-normal-text-color: #0e0b3d;
  --fc-normal-placeholder-color: #b3b8d0;

  /* PRIMARY COLOR | HSL FORMAT*/
  --fc-primary-color-hue: 201;
  --fc-error-color-hue: 356;
  --fc-primary-hsl: var(--fc-primary-color-hue), 100%, 54%;
  --fc-error-hsl: var(--fc-error-color-hue), 100%, 54%;

  /* HOVER */
  --fc-field-hover-bg-color: #f7f9fc;
  --fc-border-hover-color: #dde0ee;
  --fc-field-hover-text-color: #b3b8d0;

  --fc-border-active-color: #1463ff;
}

.formcarry-container * {
  box-sizing: border-box;
}

.formcarry-container label {
  display: block;
  cursor: pointer;
}

.formcarry-container .formcarry-block:not(:first-child) {
  margin-top: 16px;
}

/*=============================================
=            Fields           =
=============================================*/

.formcarry-container input,
.formcarry-container textarea,
.formcarry-container select {
  margin-top: 4px;
  width: 100%;
  height: 42px;
  border: 1px solid var(--fc-border-color);
  color: var(--fc-normal-text-color);
  border-radius: 2px;
  padding: 8px 12px;

  font-family: "Josefin Sans", sans-serif;
  font-size: 14px;
  transition: 125ms background, 125ms color, 125ms box-shadow;
}

.formcarry-container textarea {
  min-height: 188px;
  max-width: 100%;
  padding-top: 12px;
}

.formcarry-container input::placeholder,
.formcarry-container textarea::placeholder,
.formcarry-container select::placeholder {
  color: var(--fc-normal-placeholder-color);
}
/* ... */

